Thu Nov 16 15:24:45 2000  Christopher Faylor <cgf@cygnus.com>

	* Makefile.in: Make import library creation 'make -j2' friendly.

Thu Nov 16 10:28:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* uinfo.cc (uinfo_init): Call `cygwin_set_impersonation_token' to
	reset `cygheap->user.token' to INVALID_HANDLE_VALUE.

Thu Nov 16 00:18:15 2000  Christopher Faylor <cgf@cygnus.com>

	* exceptions.cc (interrupt_setup): Don't set signal mask here or races
	occur with main thread.  Set it in sigdelayed instead.
	(sigreturn): Reflect change in stack order of ebp and flags.
	(sigdelayed): Set stack frame correctly.  Call set_process_mask here
	with flags for last trapped signal.
	(signal_dispatch): Add newmask.
	* sigproc.cc (wait_sig): Eliminate ill-considered attempt to halt
	looping signal processors.
	* perthread.h (signal_dispatch): Add newmask field.

Wed Nov 15 22:08:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* uinfo.cc (internal_getlogin): Change parameter list to reflect
	that `token' is member of cygheap_user now.
	(uinfo_init): Use modified internal_getlogin.
	* syscalls.cc (seteuid): Ditto.

Wed Nov 15 21:56:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* cygheap.h: Move `token' and `impersonated' from class _pinfo
	to class cygheap_user.
	* pinfo.h: Ditto.
	* fork.cc (fork_child): Change usage of `token' and `impersonated'
	accordingly.
	(fork_parent): Ditto.
	* security.cc (cygwin_set_impersonation_token): Ditto.
	* sigproc.cc (proc_subproc): Ditto.
	* spawn.cc (spawn_guts): Ditto.
	* syscalls.cc (seteuid): Ditto.
	* uinfo.cc (uinfo_init): Ditto.

Wed Nov 15  9:59:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* spawn.cc (spawn_guts): Revert patch to ignore chroot settings
	on creating native Win32 environment.

Wed Nov 15 01:44:37 2000  Christopher Faylor <cgf@cygnus.com>

	* fork.cc (slow_pid_reuse): Off-by-one.

Wed Nov 15 01:20:24 2000  Christopher Faylor <cgf@cygnus.com>

	Throughout use myself->ppid_handle rather than parent_alive.